--- a/debian/control
+++ b/debian/control
@@ -5,11 +5,11 @@ Maintainer: Jeremy Davis <jeremy@turnkeylinux.org>
 Build-Depends:
  debhelper (>= 10),
  dh-exec,
+ dh-python,
  python3 (>= 3.5),
  python3-all (>= 3.5~),
  python3-setuptools,
  python3-requests,
-X-Python-Version: >= 3.5
 Standards-Version: 4.0.0
 
 Package: octohub
