--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Build-Depends:
  debhelper (>= 10),
  dh-exec,
  dh-python,
- python3 (>= 3.5),
- python3-all (>= 3.5~),
+ python3 (>= 3.9),
+ python3-all (>= 3.9),
  python3-setuptools,
  python3-requests,
 Standards-Version: 4.0.0
@@ -17,6 +17,7 @@ Architecture: any
 Depends:
  ${misc:Depends},
  ${python3:Depends},
+ python3 (>= 3.9),
  python3-requests,
 Suggests:
  python3-profiler,
